# kernel-node

./: Cargo.toml  LICENSE  README.md  build.rs  config_spec.toml
.github/workflows/: ci.yml
capnp/: echo.capnp  server.capnp  wallet.capnp
crates/wallet/: Cargo.toml
crates/wallet/src/: io.rs  lib.rs
crates/wallet/src/silentpayments/: keys_file.rs  mod.rs  scanning.rs  sending.rs  wallet.rs  wallet_store.rs
doc/: build.md  wallet.md
src/: daemonize.rs  ext.rs  ipc.rs  kernel_util.rs  lib.rs  main.rs  peer.rs
