[package]
name = "kernel-node"
version = "0.1.0"
edition = "2021"

[dependencies]
configure_me = "0.4.0"
# bitcoinkernel = { path = "../rust-bitcoinkernel", version = "0.0.15" }
bitcoinkernel = "0.0.23"
env_logger = "0.10"
addrman = { package = "bitcoin-address-book", git = "https://github.com/rustaceanrob/bitcoin-address-book", rev = "4417e4c8f5d04245947c758b73fb0dc9e7e0bd15" }
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = false, rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598" }
p2p = { package = "bitcoin-p2p", git =  "https://github.com/2140-dev/bitcoin-p2p.git", rev = "a12f3372982efb62cbee8c6af8938343541c6d06" }
home = "0.5"
log = "0.4"
ctrlc = "3.4.5"

[build-dependencies]
configure_me_codegen = "0.4.0"

[package.metadata.configure_me]
spec = "config_spec.toml"

[[bin]]
name = "node"
